<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_singlerecyclehome"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:background="@drawable/layout_bg"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/ic_currentweathericon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/tv_description"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_star" />

    <TextView
        android:id="@+id/tv_selectedcity"
        android:layout_width="104dp"
        android:layout_height="79dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:foregroundGravity="center"
        android:gravity="center_horizontal"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_degrees"
        app:layout_constraintStart_toEndOf="@+id/ic_currentweathericon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_degrees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/degree_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/gridLayout"
        app:layout_constraintStart_toEndOf="@+id/tv_selectedcity"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="71dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:gravity="center_horizontal"
        android:minLines="2"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_currentweathericon" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/layout_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imgbtn_update"
            style="@style/ButtonExtra"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:rotationY="0"
            app:layout_column="0"
            app:layout_row="0"
            app:srcCompat="@android:drawable/ic_popup_sync" />

        <ImageButton
            android:id="@+id/imgbtn_showonmap"
            style="@style/ButtonExtra"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_column="1"
            app:layout_row="1"
            app:srcCompat="@android:drawable/ic_dialog_map" />

        <ImageButton
            android:id="@+id/imgbtn_delete"
            style="@style/ButtonExtra"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_column="1"
            app:layout_row="0"
            app:srcCompat="@android:drawable/ic_delete" />

        <ImageButton
            android:id="@+id/imgbtn_editcity"
            style="@style/ButtonExtra"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_column="0"
            app:layout_row="1"
            app:srcCompat="@android:drawable/ic_menu_edit" />
    </androidx.gridlayout.widget.GridLayout>

    <ImageView
        android:id="@+id/iv_currentclouds"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toTopOf="@+id/tx_currentcloud"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/_clouds" />

    <ImageView
        android:id="@+id/iv_iconcurrentwind"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toTopOf="@+id/tx_currentwind"
        app:layout_constraintStart_toStartOf="@+id/tx_currentwind"
        app:srcCompat="@drawable/_wind" />

    <ImageView
        android:id="@+id/iv_rainlogo"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_rainmm"
        app:layout_constraintStart_toStartOf="@+id/txt_rainmm"
        app:srcCompat="@drawable/_rain"
        tools:visibility="invisible" />

    <ImageView
        android:id="@+id/iv_iconhumidity"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toTopOf="@+id/tx_currenthumdity"
        app:layout_constraintStart_toStartOf="@+id/tx_currenthumdity"
        app:srcCompat="@drawable/humidity" />

    <TextView
        android:id="@+id/tx_currentcloud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/current_clouds"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/iv_currentclouds" />

    <TextView
        android:id="@+id/txt_rainmm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="16dp"
        android:text="@string/rainmm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tx_currenthumdity"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/tx_currentwind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="16dp"
        android:text="@string/currentwind"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tx_currentcloud" />

    <TextView
        android:id="@+id/tx_currenthumdity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="16dp"
        android:text="@string/currenthumdity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tx_currentwind" />

    <TextView
        android:id="@+id/tv_currentminmax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/minmaxdegree_single_recycle"
        app:layout_constraintStart_toStartOf="@+id/tv_degrees"
        app:layout_constraintTop_toBottomOf="@+id/tv_degrees" />

    <TextView
        android:id="@+id/txt_lastupdated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/last_updated"
        app:layout_constraintEnd_toEndOf="@+id/gridLayout"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>